<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.example.administrator.bignightout.BarsMenu">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Bars:"
        android:textColor="#FFF"
        android:textSize="30dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        />

    <!--Setting up GridLayout columns & rows for app layout design-->
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.Administrator.menu.BarsMenu"
        android:columnCount="1"
        android:rowCount="6"
        android:useDefaultMargins="true"
        >


        <Button
            android:id="@+id/menu_1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/barmenu1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="LaverysRedirect"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/menu_2"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/barmenu2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="Redirect2"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/menu_3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/barmenu3"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="Redirect3"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/menu_4"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/barmenu4"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="3"
            android:layout_column="0"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            />

        <Button
            android:id="@+id/menu_5"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/barmenu5"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="4"
            android:layout_column="0"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            />

    </GridLayout>

</LinearLayout>