<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.example.administrator.bignightout.MenuActivity">

    <!--Setting up GridLayout columns & rows for app layout design-->
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.rebecca.assignment2.MainActivity"
        android:columnCount="1"
        android:rowCount="6"
        android:useDefaultMargins="true"

        >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Categories "
            android:textColor="#FFF"
            android:textSize="30dp"
            android:layout_marginTop="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            android:layout_column="0"
            />



        <Button
            android:id="@+id/menu_1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/menu1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="Redirect1"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:drawableLeft="@drawable/minibeerblack"
            />

        <Button
            android:id="@+id/menu_2"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/menu2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="Redirect2"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:drawableLeft="@drawable/minicocktailsblack"
            />

        <Button
            android:id="@+id/menu_3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/menu3"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="Redirect3"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:drawableLeft="@drawable/miniclubblack"
            />

        <Button
            android:id="@+id/menu_4"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/menu4"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="4"
            android:layout_column="0"
            android:onClick="Redirect4"
            android:height="70dp"
            android:background="#000"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:drawableLeft="@drawable/minicraftbeerblack"
            />
        <Button
            android:id="@+id/menu_5"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/menu5"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_row="5"
            android:layout_column="0"
            android:onClick="Redirect5"
            android:height="70dp"
            android:background="#000"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="50dp"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:drawableLeft="@drawable/minieventsblack"

            />

    </GridLayout>


</RelativeLayout>