<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/darkblur"
    tools:context="com.example.administrator.bignightout.MainActivity">

    <!-- Grid layout to position home page elements -->
    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        tools:context="com.example.administrator.bignightout.MainActivity"
        android:columnCount="1"
        android:rowCount="8" >

        <!-- textView Used for the brightness filter -->
        <TextView
            android:id="@+id/countertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textColor="#FFF"
            android:textSize="15dp"
            android:layout_gravity="right"
            android:layout_row="1"
            android:layout_column="0" />

        <!-- Title text -->
        <TextView
            android:id="@+id/Titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title1"
            android:textColor="#FFF"
            android:textSize="60dp"
            android:fontFamily="cursive"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:id="@+id/Titletwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title2"
            android:textColor="#FFF"
            android:textSize="60dp"
            android:fontFamily="cursive"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:id="@+id/Titlethree"
            android:layout_width="wrap_content"
            android:layout_height="83dp"
            android:text="@string/Title3"
            android:textColor="#FFF"
            android:textSize="60dp"
            android:fontFamily="cursive"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_row="4"
            android:layout_column="0" />


        <!-- Login button has link to redirect to login page (menu)-->
        <Button
            android:id="@+id/viewmenu"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_column="0"
            android:layout_gravity="center"
            android:text="Login"
            android:onClick="OpenLogin"
            android:textSize="20dp"
            android:height="40dp"
            android:background="#ffffff"
            android:layout_row="7"
            android:outlineProvider="background"
            android:textColor="#000000"
            android:layout_marginBottom="70dp"

            />
        <!-- Register button has link to redirect to login page (menu)-->
        <Button
            android:id="@+id/viewregister"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_column="0"
            android:layout_gravity="center"
            android:text=" Register "
            android:onClick="OpenRegFromMain"
            android:textSize="20dp"
            android:height="40dp"
            android:background="#ffffff"
            android:layout_row="7"
            android:outlineProvider="background"
            android:textColor="#000000"
            android:layout_marginTop="70dp"
            />


    </GridLayout>
</RelativeLayout>
